ajuste container et z-index contenu et header pour header fixe

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,6 +11,7 @@ body{
 
 .body {
     margin-top: 208px;
+    z-index: 9000;
 }
 
 /*HEADER*/
@@ -20,6 +21,8 @@ header {
     left:0;
     right:0;
     margin:auto;
+    z-index:9999;
+    background-color: #ededed;
 }
 
 
